<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library Catalog</string>

    <string name="add_new">Add new</string>
    <string name="save">Save</string>
    <string name="search">Search</string>

    <string name="action_settings">Settings</string>
    <string name="action_import">Import from database</string>
    <string name="action_export">Export database</string>
    <string name="action_reload">Reload virtual</string>
    <string name="action_search">Search catalog</string>
    <string name="action_delete">Delete item</string>
    <string name="action_clear">Clear catalog</string>
    <string name="action_stats">View statistics</string>

    <string name="library">Library</string>
    <string name="slushpile">Slushpile</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="editor">Editor</string>
    <string name="sort_by">Sort by</string>
    <string name="series">Series</string>
    <string name="number">#</string>
    <string name="ebook">Ebook</string>
    <string name="hardcopy">Hardcopy</string>
    <string name="stage">Stage</string>
    <string name="flag">Flag</string>
    <string name="notes">Notes</string>

    <string name="book">Book</string>
    <string name="anthology">Anthology</string>
    <string name="story">Story</string>

    <string name="search_books">Search books</string>
    <string name="search_stories">Search stories</string>
    <string name="empty">No matches found</string>

    <string name="pref_viewmode">Library view mode</string>
    <string name="pref_viewmode_summ">Hide Slushpile attributes</string>
</resources>
