<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        android:showAsAction="never" />

    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:showAsAction="never" />

    <item android:id="@+id/action_stats"
        android:title="@string/action_stats"
        android:showAsAction="never" />

    <item android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:showAsAction="never" />

    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />


</menu>
