<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/type_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioGroup
                    android:id="@+id/type_group"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/type_book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book"/>

                    <RadioButton
                        android:id="@+id/type_anthology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anthology"/>

                    <RadioButton
                        android:id="@+id/type_story"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/story"/>

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:ems="10"
                android:inputType="text"
                android:padding="3dp"  />

            <EditText
                android:id="@+id/author_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author"
                android:ems="10"
                android:inputType="text"
                android:padding="3dp" />

            <EditText
                android:id="@+id/sortby_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sort_by"
                android:ems="10"
                android:inputType="text"
                android:padding="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/series_text"
                    android:layout_gravity="fill_horizontal"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:hint="@string/series"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="3dp" />

                <EditText
                    android:id="@+id/number_text"
                    android:layout_width="0dip"
                    android:layout_gravity="fill_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="17"
                    android:hint="@string/number"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="3dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cbox_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal" >

                <CheckBox
                    android:id="@+id/ebook_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/floppy"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

                <CheckBox
                    android:id="@+id/hardcopy_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/book"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/relatives_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/add_relative_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SaveButtonTheme"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>